--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -271,10 +271,20 @@
     <Content Include="Views\Cliente\Create.cshtml" />
     <Content Include="Views\Cliente\Edit.cshtml" />
     <Content Include="Views\Cliente\Details.cshtml" />
+    <Content Include="Views\ProductoCompra\Create.cshtml" />
+    <Content Include="Views\ProductoCompra\Edit.cshtml" />
+    <Content Include="Views\ProductoCompra\Details.cshtml" />
+    <Content Include="Views\ProductoCompra\ListaProducto.cshtml" />
+    <Content Include="Views\ProductoCompra\ListaCompra.cshtml" />
+    <Content Include="Views\Compra\Index.cshtml" />
+    <Content Include="Views\Compra\Create.cshtml" />
+    <Content Include="Views\Compra\Edit.cshtml" />
+    <Content Include="Views\Compra\Details.cshtml" />
+    <Content Include="Views\Compra\ListaUsuario.cshtml" />
+    <Content Include="Views\Compra\ListaCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Compra\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
