--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductoCompraController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\ProductoImagenController.cs" />
     <Compile Include="Controllers\ProveedorController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\TestController.cs" />
@@ -282,6 +283,11 @@
     <Content Include="Views\Compra\Details.cshtml" />
     <Content Include="Views\Compra\ListaUsuario.cshtml" />
     <Content Include="Views\Compra\ListaCliente.cshtml" />
+    <Content Include="Views\ProductoImagen\Index.cshtml" />
+    <Content Include="Views\ProductoImagen\Create.cshtml" />
+    <Content Include="Views\ProductoImagen\Details.cshtml" />
+    <Content Include="Views\ProductoImagen\Edit.cshtml" />
+    <Content Include="Views\ProductoImagen\ListaProducto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
