--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -288,6 +288,7 @@
     <Content Include="Views\ProductoImagen\Details.cshtml" />
     <Content Include="Views\ProductoImagen\Edit.cshtml" />
     <Content Include="Views\ProductoImagen\ListaProducto.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
