--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -301,6 +301,8 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\Producto\Customizable.cshtml" />
     <Content Include="Views\Compra\Report_Cliente_Compra.cshtml" />
+    <Content Include="Views\Proveedor\uploadCSV.cshtml" />
+    <Content Include="Uploads\Datos.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
