--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BaseModelo.cs" />
     <Compile Include="Models\cliente.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -189,6 +190,7 @@
     <Compile Include="Models\usuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UsuarioIndex.cs" />
     <Compile Include="Models\usuariorol.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -303,6 +305,8 @@
     <Content Include="Views\Compra\Report_Cliente_Compra.cshtml" />
     <Content Include="Views\Proveedor\uploadCSV.cshtml" />
     <Content Include="Uploads\Datos.xlsx" />
+    <Content Include="Views\User\PaginadorIndex.cshtml" />
+    <Content Include="Views\Shared\Paginador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
