--- a/TheProyecto/TheProyecto.csproj
+++ b/TheProyecto/TheProyecto.csproj
@@ -307,6 +307,7 @@
     <Content Include="Uploads\Datos.xlsx" />
     <Content Include="Views\User\PaginadorIndex.cshtml" />
     <Content Include="Views\Shared\Paginador.cshtml" />
+    <Content Include="Views\ProductoImagen\CargarImagen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
